@@ -1,40 +1,0 @@
-Ubuntu Tasks Feature List
-=========================
-
-**Completed:**
-
- * Projects
-   * Create
-   * Rename
-   * Archive
-   * Delete
-   * Clear archived projects
- * Lists
- * Tasks
-   * Create
-   * Quick add
-   * Rename
-   * Archive
-   * Delete
-   * Description
-   * Due date
-   * Repeating
-   * Priority
-   * Tags
- * Other
-   * Search
-
-**To Do:**
-
- * Projects
-   * Statistics
- * Lists
-   * Create
-   * Rename
-   * Archive
-   * Delete
- * Tasks
-   * Dependencies
- * Other
-   * Sorting
-   * Filters
