@@ -4,7 +4,8 @@ RELEASE_DIR=../releases/ubuntu-tasks/v$VERSION
 cp . $RELEASE_DIR -r
 cd $RELEASE_DIR
 replace '@APP_VERSION@' $VERSION manifest.json
-replace '@APP_VERSION@' $VERSION ui/AboutPage.qmlsudo rm .git* -r
+replace '@APP_VERSION@' $VERSION ui/AboutPage.qml
+sudo rm .git* -r
 rm ubuntu-ui-extras -r
 cp ../../../ubuntu-ui-extras . -r
 sudo rm ubuntu-ui-extras/.git* -r
